/*
 * $Id: ChangeLog,v 1.362 2002/08/29 18:10:07 ronpinkas Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2002-08-29 23:34 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * tests/pp.prg
    ! Fixed CompileNestedBlock() so that blocks withing literal arrays will not be missed.
    ! Fixed Keyboard History to not error when the buffer is full (and shift oldest command out).
    + Added auto scrolling within the DOT prompt.

  * tests/rp_dot.ch
    + Added rule for Clipper to fix bug with @ ... GET ...
    * Changed CLS to respect additional status line (1)

  /* Thanks vic@guerra.com.mx for his extensive input, and reporting of the problems leading to the above fixes.

2002-08-29 11:08 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * tests/pp.prg
    ! Fixed handling of command line defines.

  * tests/pptest.prg
    + Added #ifdef sample in demo script.

2002-08-28 14:28 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/vm/memvars.c
    ! Fixed hb_memvarSave to save date vars as date.

2002-08-27 21:30 UTC-0300 Luiz Rafael Culik <culikr@uol.com.br>
   * source/rtl/achoice.prg
     * Small fix to previus change
   * source/rtl/dummy.prg
     * removed __dbtotal() function
  + source/rdd/dbtotal.prg
     * Source file to __dbtotal() function
  * makefile.bc
    makefile.vc
    source/rdd/Makefile
     * Added dbtotal.prg to dependencie list

2002-08-27 17:15 UTC-0300 Horacio Roldan <harbour_ar@yahoo.com.ar>
   * include/fileio.ch
   * source/rtl/filesys.c
   * source/rtl/fstemp.c
     + added FO_EXCL for exclusive create
     + added convert_create_flags_ex
     ! fixed hb_fsCreateEx(), HB_FCREATE(),
       hb_fsCreateTemp(), HB_FTEMPCREATE().
       These functions were not working.

2002-08-27 10:54 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/pp/ppcore.c