@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.362 2002/08/29 18:10:07 ronpinkas Exp $
+ * $Id: ChangeLog,v 1.363 2002/08/30 06:35:32 ronpinkas Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,16 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2002-08-30 18:28 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
+  * source/compiler/harbour.sly
+    % Optimized WHILE .T. loops
+
+  * source/vm/hvm.c
+    % Minor optimization of HB_P_*ADDINT
+
+  * tests/pp.prg
+    * Minor correction to Auto Scrollong in DOT Mode.
 
 2002-08-29 23:34 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
   * tests/pp.prg
